--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
+        <meta
+            name="author"
+            content="Mustafa Onur Çelik [https://github.com/onur-celik]"
+        />
         <meta name="description" content="Bitcoin1Second" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
